--- a/style.css
+++ b/style.css
@@ -151,8 +151,8 @@ canvas {
   line-height: 1.5;
 }
 
-/* Cards (Projects, Skills, Experience) */
-.projects, .skills, .experience {
+/* Cards ( Skills, Experience) */
+ .skills, .experience {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1.5rem;
