--- a/style.css
+++ b/style.css
@@ -118,8 +118,7 @@ canvas {
 
 .profile-img:hover {
   transform: scale(1.05);
-}
-/* Project Section */
+}/* Project Section */
 .projects {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -169,6 +168,7 @@ canvas {
   color: #005f99;
   text-decoration: underline;
 }
+
 
 
 /* Cards ( Skills, Experience) */
